@@ -2027,6 +2027,12 @@ stopifnot(
 ## length 0 and seg.faulted in R <= 3.3.2
 
 
+## PR#17186 - Sys.timezone() on some Debian derived platforms
+(S.t <- Sys.timezone())
+if(is.na(S.t) || !nzchar(S.t)) stop("could not get timezone")
+## has been NA_character_  in Ubuntu 14.04.5 LTS
+
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
